--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
   firebase.initializeApp(firebaseConfig);
 </script>
     
-    <script src="js/baseclass.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/form.js"></script>
-    <script src="js/board.js"></script>
-    <script src="js/instruction.js"></script>
+    <script src="baseclass.js"></script>
+    <script src="player.js"></script>
+    <script src="game.js"></script>
+    <script src="form.js"></script>
+    <script src="board.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 </head>
