--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="game.js"></script>
     <script src="form.js"></script>
     <script src="board.js"></script>
+    <!-- <script src="js/instruction.js"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 </head>
